# RAT

./: .gitignore  HOWTO.adoc  HOWTO.md  LICENSE  README.md  app-linux.spec  app-win.spec  app.spec  pyproject.toml
.github/workflows/: build.yml
roles/: 14_bis_16_studierende.json  17_bis_26_studierende.json  27_bis_46_studierende.json
src/gui/: __init__.py
src/rat/: __init__.py  app.py
src/rat/io/: __init__.py  parser.py  survey_parser.py
src/rat/role_assignment_calculator/: calculator.py  calculator_io.py  constants.py  genders.py  maresa_calculator_factory.py
src/rat/role_assignment_calculator/tests/: calculator_tests.py  maresa_calculator_factory_tests.py
src/rat/ui/: __init__.py  editor.py  main_window.py  output.py  output_window.py  role_editor.py  student_editor.py  wxtest.py
src/role_assignment_calculator/: calculator.py  calculator_io.py  genders.py
src/role_assignment_calculator/tests/: calculator_io_tests.py  calculator_tests.py
survey/: survey.lss
