[project]
name = "rat"
version = "0.1.0"
description = "Role Assignment Tool"
readme = "README.md"
authors = [
    { name = "Yannis", email = "yannis@yannis2707.me" }
]
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
    "python-sat>=1.8.dev26",
    "scipy>=1.16.3",
    "wxpython>=4.2.4",
]

[project.scripts]
rat = "rat:main"

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.11",
]
